# TransientInjector

./: README.md  config.yaml  process_trans.py  pyproject.toml  trans_sim.py  transient_util.py
scripts/: process_trans.py
scripts/.ipynb_checkpoints/: process_trans-checkpoint.py
transsim/: process_trans.py  trans_sim.py  transient_util.py
transsim/conf/: config.yaml
